# nolemma

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yaml
p2p/: Cargo.toml
p2p/src/: lib.rs
rollup/: Cargo.toml
rollup/src/: address.rs  block.rs  blockchain.rs  lib.rs  sequencer.rs  signer.rs  transaction.rs
rpc/: Cargo.toml
rpc/src/: main.rs
script/: Cargo.toml
script/src/: main.rs
sequencer/: Cargo.toml
sequencer/src/: main.rs
