[workspace]

resolver = "2"
members = ["rollup", "script", "sequencer", "p2p"]

[workspace.dependencies]
alloy-primitives = { version = "0.8.0", features = ["rand", "serde"] }
bincode = "1.3.3"
secp256k1 = { version = "0.29", features = [
	"rand",
	"serde",
	"recovery",
	"global-context",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rollup = { path = "rollup" }
log = "0.4.22"
env_logger = "0.11.5"
tokio = { version = "1", features = ["full"] }
