[package]
name = "rollup"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
bincode = { workspace = true }
imt = { git = "https://github.com/sergerad/incremental-merkle-tree" }
secp256k1 = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
