[package]
name = "script"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
hex = "0.4.3"
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
rollup = { workspace = true }
sha2 = "0.10"
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
